fix: page content position shift
* prevent page content shift (e.g. from Table page -> open Details page with no scrollbar = page content shifts)

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 html {
   font-size: 14px;
+  scrollbar-gutter: stable; /* prevent page content shift (e.g. from Table page -> open Details page with no scrollbar = page content shifts) */
 }
 
 .pointer {
   cursor: pointer;
 }
 
-/* prevent Toast notification position shift as Bootstrap Modal closes */
+/* Toast - prevent Toast notification position shift as Bootstrap Modal closes */
 .modal {
   overflow-y: auto !important;
 }
